[workspace]
members = [
    "crates/conode-cli",
    "crates/conode-storage",
    "crates/conode-network",
    "crates/conode-protocol",
    "crates/conode-logging",
    "crates/conode-config",
    "crates/conode-starknet",
    "crates/conode-types", "crates/conode-state",
]


[package]
name = "conode"
version = "0.1.0"
edition = "2021"


[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
x25519-dalek = "2.0.0-rc.3"
chacha20poly1305 = "0.10"
rand_core = "0.6"
curve25519-dalek = "3.2"
libp2p = { version = "0.54.0", features = [
    "identify",
    "ed25519",
    "kad",
    "mdns",
    "gossipsub",
    "noise",
    "yamux",
    "request-response",
    "tcp",
    "tokio",
    "macros",
    "tls",
    "autonat",
    "dcutr",
    "relay",
    "serde",
] }
rand = "0.8.5"
async-trait = "0.1.81"
bincode = "1.3.3"
futures = "0.3.30"
libp2p-kad = "0.46.0"
rustls = "0.23.12"
rustls-pki-types = "1.8.0"
log = "0.4.22"
env_logger = "0.11.5"
rocksdb = { version = "0.22.0", features = ["lz4", "multi-threaded-cf"] }
starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
starknet-types-core = { git = "https://github.com/starknet-io/types-rs.git", version = "0.1.0", default-features = false, features = [
    "serde",
] }
uuid = "1.10.0"
parking_lot = "0.12.3"
tempfile = "3.12.0"
thiserror = "1.0.63"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
rusqlite = { version = "0.32.0", features = ["bundled", "column_decltype"] }
crossbeam-channel = "0.5.13"
tokio-tungstenite = "0.24.0"
futures-util = "0.3.30"
toml = "0.8.19"
config = "0.14.0"
sqlx = "0.8.2"
security-framework = "3.0.0"
once_cell = "1.20.2"
lazy_static = "1.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
pbkdf2 = "0.12.2"
getrandom = "0.2.15"
tiny-bip39 = "2.0.0"
rsa = "0.9.6"
tiny-keccak = "2.0.2"
hdpath = "0.6.3"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1.40" }
serde_json = "1.0"

[lints.rust]
non_snake_case = "allow"
dead_code = "allow"
deprecated = "allow"
unused_variables = "allow"
async_fn_in_trait = "allow"
