[package]
name = "conode-config"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
toml = "0.8.19"

conode-types = { path = "../conode-types" }
libp2p = "0.54.1"
once_cell = "1.20.2"
env = "0.1.0"
