[package]
name = "conode-network"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ed25519-dalek = "2.1.1"
libp2p = { version = "0.54.0", features = [
    "identify",
    "ed25519",
    "kad",
    "mdns",
    "gossipsub",
    "noise",
    "yamux",
    "request-response",
    "tcp",
    "tokio",
    "macros",
    "tls",
    "autonat",
    "dcutr",
    "relay",
    "serde",
] }
starknet = "0.12.0"
log = "0.4.22"
bincode = "1.3.3"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = "1.11.0"
libp2p-kad = "0.46.2"

getrandom = "0.2.15"
anyhow = "1.0.91"

conode-logging = { path = "../conode-logging" }
conode-storage = { path = "../conode-storage" }
conode-types = { path = "../conode-types" }
conode-starknet = { path = "../conode-starknet" }
conode-config = { path = "../conode-config" }
futures = "0.3.31"
pin-project = "1.1.6"
hex = "0.4.3"
x25519-dalek = "2.0.1"
rand = "0.8.5"
thiserror = "2.0.1"
tracing.workspace = true
