[package]
name = "conode-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

conode-config = { path = "../conode-config" }
conode-network = { path = "../conode-network" }
conode-storage = { path = "../conode-storage" }
conode-starknet = { path = "../conode-starknet" }
conode-state = { path = "../conode-state" }
conode-types = { path = "../conode-types" }
conode-logging = { path = "../conode-logging" }
libp2p = { version = "0.54.0", features = [
    "identify",
    "ed25519",
    "kad",
    "mdns",
    "gossipsub",
    "noise",
    "yamux",
    "request-response",
    "tcp",
    "tokio",
    "macros",
    "tls",
    "autonat",
    "dcutr",
    "relay",
    "serde",
] }
anyhow = "1.0.91"
chrono = { version = "0.4.38", features = ["serde"] }
ed25519-dalek = "2.1.1"
futures = "0.3.31"
log = "0.4.22"
starknet = "0.12.0"
bincode = "1.3.3"
uuid = "1.11.0"
tracing.workspace = true
tracing-subscriber = "0.3.18"
