[package]
name = "conode-starknet"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = "2.1.1"
getrandom = "0.2.15"
lazy_static = "1.5.0"
libp2p = { version = "0.54.0", features = [
    "identify",
    "ed25519",
    "kad",
    "mdns",
    "gossipsub",
    "noise",
    "yamux",
    "request-response",
    "tcp",
    "tokio",
    "macros",
    "tls",
    "autonat",
    "dcutr",
    "relay",
    "serde",
] }
security-framework = "3.0.0"
serde = { workspace = true, features = ["derive"] }
starknet = "0.12.0"
tiny-bip39 = "2.0.0"

conode-types = { path = "../conode-types" }
conode-config = { path = "../conode-config" }
sha3 = "0.10.8"
starknet-crypto = "0.7.2"
rsa = "0.9.6"
rand = "0.8.5"
x25519-dalek = "2.0.1"
