[package]
name = "conode-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
starknet = "0.12.0"
rocksdb = "0.22.0"
ed25519-dalek = "2.1.1"
thiserror = "1.0.65"
libp2p = { version = "0.54.0", features = [
    "identify",
    "ed25519",
    "kad",
    "mdns",
    "gossipsub",
    "noise",
    "yamux",
    "request-response",
    "tcp",
    "tokio",
    "macros",
    "tls",
    "autonat",
    "dcutr",
    "relay",
    "serde",
] }

tiny-bip39 = "2.0.0"
lazy_static = "1.5.0"
security-framework = "3.0.0"
anyhow = "1.0.91"
parking_lot = "0.12.3"

conode-types = { path = "../conode-types" }
conode-starknet = { path = "../conode-starknet" }
conode-logging = { path = "../conode-logging" }
conode-config = { path = "../conode-config" }

tracing = { workspace = true }
bincode = "1.3.3"
rand = "0.8.5"
hex = "0.4.3"
backoff = "0.4.0"
uuid = "1.11.0"
