[package]
name = "conode-types"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
bincode = "1.3.3"
chrono = "0.4.38"
hex = "0.4.3"
libp2p = { version = "0.54.0", features = [
    "identify",
    "ed25519",
    "kad",
    "mdns",
    "gossipsub",
    "noise",
    "yamux",
    "request-response",
    "tcp",
    "tokio",
    "macros",
    "tls",
    "autonat",
    "dcutr",
    "relay",
    "serde",
] }
primitive-types = "0.13.1"
rand = "0.8.5"
rsa = "0.9.6"
serde = { workspace = true, features = ["derive"] }
starknet = "0.12.0"
uuid = { version = "1.11.0", features = ["v4"] }
